modules/Module_09_Security/network_policies/files/ngninx-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-block
spec:
  podSelector:
    matchLabels:
      app: lvnginx2
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.244.0.0/16
      ports:
        - protocol: TCP
          port: 80

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-block-http
  namespace: cka
spec:
  podSelector:
    matchLabels:
      run=pod2
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run=pod1
  ports:
  - protocol: TCP
    port: 80
